--- a/src/App.css
+++ b/src/App.css
@@ -112,6 +112,15 @@ p{
   margin-top: 20px;
 }
 
+.author {
+  text-align: center;
+  font-family: monospace;
+  margin-top: 15px;
+  cursor: grabbing;
+  font-weight: 200;
+  font-size: 1rem;
+}
+
 @media screen and (max-width: 700px) {
   .drumMachine {
     transform: scale(0.5);
